--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
 	<header>
-		<h1 class="center">TO-DO-LIST</h1>
+		<h1 class="center">LISTA DE TAREFAS</h1>
 	</header>
 	<section>
 		<div class="inp center">
-			Digite a tarefa:<input type="text" class="tarefa center"name="tarefa">
-			Digite o tempo estimado em minutos:<input type="number" class="tempo center" name="tempo">
+			<p class="break">Digite a tarefa:</p>
+			<input type="text" class="tarefa center"name="tarefa">
+			<p class="break b2">Digite o tempo estimado em minuto:</p>
+			<input type="number" class="tempo center" name="tempo">
 			<input type="submit" name="Enviar!" value="Adicionar!">
 		</div>
 	</section>
